--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,8 +13,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
